UDMan: Remove JDK 21 calls.